<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/abl_toolbar"
            layout="@layout/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:myTitle="@{@string/mobile_contacts}" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_contacts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/abl_toolbar" />

        <LinearLayout
            android:id="@+id/ll_no_permissions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@+id/rv_contacts">

            <TextView
                android:id="@+id/tv_no_permissions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/mobile_we_cant_show_your_contact_list"
                android:textColor="@color/color_text" />

            <TextView
                android:id="@+id/tv_no_permissions_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="@dimen/padding"
                android:text="@string/mobile_you_can_still_transfer_card"
                android:textColor="@color/color_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_permissions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/mobile_allow_access_to_contacts"
                android:textAllCaps="true" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_add_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/mobile_add_phone_number_manually" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>