<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_view_background">

        <include
            android:id="@+id/abl_toolbar"
            layout="@layout/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:myTitle="@{@string/notifications}" />

        <TextView
            android:id="@+id/tv_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:fontFamily="sans-serif-medium"
            android:textSize="36sp"
            android:textColor="@color/color_red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_deep_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deep_link_to_loyalty"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_notifications" />

        <Button
            android:id="@+id/btn_navigate_to_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_detail"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_deep_link" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>