<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_view_background"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <include
            android:id="@+id/abl_toolbar"
            layout="@layout/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:myTitle="@{@string/mobile_transfer}" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:fitsSystemWindows="true"
            android:background="@color/color_blue"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_main"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    app:boxBackgroundColor="@color/color_transparent"
                    app:boxStrokeColor="@color/selector_text_input_layout_box_stroke_color_transfer"
                    app:endIconMode="clear_text"
                    app:hintEnabled="false"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin"
                        android:hint="@string/mobile_search_for_a_contact" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_countries"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/margin"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ti_search" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_manual_transfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/margin"
            android:clickable="true"
            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
            android:contentDescription="@string/image_content_description"
            android:focusable="true"
            android:text="@string/mobile_new_number"
            android:visibility="visible"
            app:backgroundTint="@color/color_gray_13"
            app:fabSize="normal"
            app:icon="@drawable/svg_plus_red" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>